workshop04/kustomize/base/dov-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment  
metadata: 
  name: dov-deploy
  namespace: myns 
  labels:
    app: dov
    name: dov-deploy
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: dov 
      name: dov-po 
  template: 
    metadata:
      name: dov-po 
      labels:
        app: dov 
        name: dov-po 
    spec:
      containers: 
      - name: dov-container
        image: chukmunnlee/dov-bear:v4
        imagePullPolicy: IfNotPresent
        env: # environment variables
        - name: INSTANCE_HASH 
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        ports:
        - name: web-port 
          containerPort: 3000
        - name: metrics-port 
          containerPort: 3100
        livenessProbe:
          httpGet:
            path: /healthz 
            port: web-port
          periodSeconds: 30
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: 32m
            memory: 32Mi
          limits:
            cpu: 32m
            memory: 64Mi
          

---
apiVersion: v1 
kind: Service 
metadata: 
  name: dov-svc 
  namespace: myns 
  labels:
    app: dov
    name: dov-svc 
spec:
  type: ClusterIP
  selector:
    app: dov 
    name: dov-po
  ports:
  - name: svc-web-port 
    port: 5000
    targetPort: web-port
  - name: svc-metrics-port 
    port: 5100
    targetPort: metrics-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  namespace: myns
  labels:
    app: dov
    name: dov-ing
spec:
  ingressClassName: nginx
  rules:
  - host: dov-137.184.249.161.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dov-svc
            port: 
              name: svc-web-port
